--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
       <span class="logo-text">Secretarial</span>
     </div>
   </div>
-  
+
   <nav class="sidebar-nav">
     <ul class="nav-list">
       <li class="nav-item">
@@ -30,6 +30,12 @@
         <a routerLink="/auditors" routerLinkActive="active" class="nav-link">
           <i class="pi pi-user-edit"></i>
           <span>Auditors</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/share-transfer" routerLinkActive="active" class="nav-link">
+          <i class="pi pi-arrow-right-arrow-left"></i>
+          <span>Share Transfer</span>
         </a>
       </li>
       <li class="nav-item">
